2016-06-26         Arnold D. Robbins     <arnold@skeeve.com>

	Repair change of 2015-08-25 to handling of MAYBE_NUM.
	* mpfr.c (mpg_force_number): Just clear MAYBE_NUM.
	* node.c (r_force_number): Clear STRING separately after
	setting NUMBER.

	Thanks to Andrew Schorr for reporting the problem.
	A test case will eventually be merged into master.

2016-06-16         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h: Add comment headers for several functions.
	* builtin.c (nondec2awknum): Actually set a '\0' before
	calling to strtod() so that the save and restore do something.

2016-06-15         Arnold D. Robbins     <arnold@skeeve.com>

	* config.sub: Update from GNULIB.

2016-06-14         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (do_sub): Fix sub for long runs of backslashes.
	Thanks to Mike Brennan for the report.

2016-06-10         Arnold D. Robbins     <arnold@skeeve.com>

	* config.guess, config.sub: Get latest from Gnulib master.
	* main.c (UPDATE_YEAR): Bump to 2016.

2016-06-09         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep.

	Unrelated:

	* configure.ac: Move AM_CONDITIONAL[ENABLE_EXTENSIONS] outside
	the enclosing if. Thanks to Assaf Gordon <assafgordon@gmail.com>
	for the report.

2016-06-08         Arnold D. Robbins     <arnold@skeeve.com>

	* symbol.c (lookup): If got Node_val, it's a non-variable
	in SYMTAB, return NULL. Can affect watchpoints in the debugger,
	maybe other places. Thanks to Hermann Peifer for the
	test case and report.

2016-06-05         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep.

2016-06-01         Arnold D. Robbins     <arnold@skeeve.com>

	* nonposix.h (getpgrp): Wrap declaration in ifdef so it doesn't
	mess things up on POSIX systems (like Solaris). Thanks to
	Nelson Beebe for the report.
	* node.c (is_hex): New function to check for 0x preceded by
	optional sign.
	(r_force_number): Use it. Thanks to Mike Brennan for the report.
