@@ -1,3 +1,11 @@
+2016-07-01         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* array.c (value_info): Print something reasonable when stfmt
+	is -1.
+	* mpfr.c (mpg_format_val): Don't cast index to char.
+	* node.c (r_format_val): Ditto.
+	Thanks to Andrew Schorr for pointing these out.
+
 2016-06-26         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Repair change of 2015-08-25 to handling of MAYBE_NUM.
